src/style.css
/*********************************** THEMES ***********************************/

:root {
    --primary1: #060606;
    --primary2: #181818;
    --primary3: #2b2b2b;
    --primary4: #3d3d3d;
    --primary5: #777777;
    --primary6: #b1b1b1;
    --primary7: #ececec;

    --scene-background: #3d3d3d;
    --grid-color:       #777777;
    --scene-font-color: #ffffff;

    --toolbox-background: #1a1a1ad5;

    --highlight1: #3497ff;
    --highlight2: #ffa500;

    --error: #e02a2a;

    --background: #2c2c2c;
}

[theme='light'] {
    --primary1: #f8f8f8;
    --primary2: #ebedef;
    --primary3: #d6d8d9;
    --primary4: #c4c4c4;
    --primary5: #c3c7cd;
    --primary6: #a4a9b2;
    --primary7: #616161;

    --scene-background: #ffffff;
    --grid-color:       #777777;
    --scene-font-color: #000000;

    --toolbox-background: #616161d5;

    --highlight1: #3497ff;
    --highlight2: #ffa500;

    --error: #e02a2a;

    --background: #ffffff;
}

/********************************* CONTROLS ***********************************/

body {
    color: var(--primary7);
}

.p-button {
    background-color: #3497ff;
    color: white;

    border-radius: 5px;
    border: 1px solid #5baaff;
    padding: 2px 10px;

    display: flex;
    justify-content: center;
    align-items: center;

    user-select: none;
}
.p-button:hover {
    background-color: #5baaff;
    cursor: pointer;
}
.p-button:active {
    background-color: #2675ca;
}

.scrollable {
    scrollbar-color: var(--highlight1) var(--primary6);
    scrollbar-width: thin;
    overflow-y: scroll;
}
.scrollable::-webkit-scrollbar {
    width: 8px;
}
.scrollable::-webkit-scrollbar-track {
    background-color: var(--primary6);
    border-radius: 100px;
}
.scrollable::-webkit-scrollbar-thumb {
    background-color: var(--highlight1);
    border-radius: 100px;
}

input[type=color] {
    background-color: transparent;
    border: none;
}
input[type=color]::-webkit-color-swatch {
    border-radius: 999px;
    padding: 0;
    border: none;
}
input[type=color]::-moz-color-swatch {
    border-radius: 999px;
    padding: 0;
    border: none;
}

/*********************************** ICONS ************************************/

.icon-small {
    width: 16px;
    height: 16px;
}
.icon-medium {
    width: 20px;
    height: 20px;
}
.icon-large {
    width: 28px;
    height: 28px;
}
.icon-small,
.icon-medium,
.icon-large {
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
    mask-position: center;
    -webkit-mask-position: center;
}

.backward-icon {
    mask-image: url(./assets/icons/backward-fast.svg);
    -webkit-mask-image: url(./assets/icons/backward-fast.svg);
}
.camera-icon {
    mask-image: url(./assets/icons/camera.svg);
    -webkit-mask-image: url(./assets/icons/camera.svg);
}
.camera-rotate-icon {
    mask-image: url(./assets/icons/camera-rotate.svg);
    -webkit-mask-image: url(./assets/icons/camera-rotate.svg);
}
.chart-icon {
    mask-image: url(./assets/icons/chart.svg);
    -webkit-mask-image: url(./assets/icons/chart.svg);
}
.check-icon {
    mask-image: url(./assets/icons/check.svg);
    -webkit-mask-image: url(./assets/icons/check.svg);
}
.chevron-down-icon {
    mask-image: url(./assets/icons/chevron-down.svg);
    -webkit-mask-image: url(./assets/icons/chevron-down.svg);
}
.chevron-right-icon {
    mask-image: url(./assets/icons/chevron-right.svg);
    -webkit-mask-image: url(./assets/icons/chevron-right.svg);
}
.compress-icon {
    mask-image: url(./assets/icons/compress.svg);
    -webkit-mask-image: url(./assets/icons/compress.svg);
}
.cube-icon {
    mask-image: url(./assets/icons/cube.svg);
    -webkit-mask-image: url(./assets/icons/cube.svg);
}
.curve-icon {
    mask-image: url(./assets/icons/curve.svg);
    -webkit-mask-image: url(./assets/icons/curve.svg);
}
.exit-icon {
    mask-image: url(./assets/icons/exit.svg);
    -webkit-mask-image: url(./assets/icons/exit.svg);
}
.expand-icon {
    mask-image: url(./assets/icons/expand.svg);
    -webkit-mask-image: url(./assets/icons/expand.svg);
}
.eye-icon {
    mask-image: url(./assets/icons/eye.svg);
    -webkit-mask-image: url(./assets/icons/eye.svg);
}
.eye-slash-icon {
    mask-image: url(./assets/icons/eye-slash.svg);
    -webkit-mask-image: url(./assets/icons/eye-slash.svg);
}
.film-icon {
    mask-image: url(./assets/icons/film.svg);
    -webkit-mask-image: url(./assets/icons/film.svg);
}
.forward-icon {
    mask-image: url(./assets/icons/forward-fast.svg);
    -webkit-mask-image: url(./assets/icons/forward-fast.svg);
}
.grid-icon {
    mask-image: url(./assets/icons/grid.svg);
    -webkit-mask-image: url(./assets/icons/grid.svg);
}
.info-icon {
    mask-image: url(./assets/icons/circle-info.svg);
    -webkit-mask-image: url(./assets/icons/circle-info.svg);
}
.moon-icon {
    mask-image: url(./assets/icons/moon.svg);
    -webkit-mask-image: url(./assets/icons/moon.svg);
}
.pause-icon {
    mask-image: url(./assets/icons/circle-pause.svg);
    -webkit-mask-image: url(./assets/icons/circle-pause.svg);
}
.play-icon {
    mask-image: url(./assets/icons/circle-play.svg);
    -webkit-mask-image: url(./assets/icons/circle-play.svg);
}
.repeat-icon {
    mask-image: url(./assets/icons/repeat.svg);
    -webkit-mask-image: url(./assets/icons/repeat.svg);
}
.sun-icon {
    mask-image: url(./assets/icons/sun.svg);
    -webkit-mask-image: url(./assets/icons/sun.svg);
}
.trash-icon {
    mask-image: url(./assets/icons/trash.svg);
    -webkit-mask-image: url(./assets/icons/trash.svg);
}
.upload-icon {
    mask-image: url(./assets/icons/upload.svg);
    -webkit-mask-image: url(./assets/icons/upload.svg);
}
.video-icon {
    mask-image: url(./assets/icons/video.svg);
    -webkit-mask-image: url(./assets/icons/video.svg);
}
.xmark-icon {
    mask-image: url(./assets/icons/xmark.svg);
    -webkit-mask-image: url(./assets/icons/xmark.svg);
}

